flux/apps/plex/https-redirect-middleware.yml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect-middleware
  namespace: plex
spec:
  redirectScheme:
    scheme: https
    permanent: true
