flux/apps/plex/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plex-web
  namespace: plex
  annotations:
    switchboard.borchero.com/ignore: "all"
    external-dns.alpha.kubernetes.io/target: traefik.tartarus.us
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`plex.tartarus.us`)
      kind: Rule
      services:
        - name: plex
          kind: Service
          port: 32400
          # scheme: https
          # serversTransport: plex-web
      middlewares:
        - name: https-redirect-middleware
          namespace: plex

  tls:
    secretName: letsencrypt-wildcard-cert-tartarus.us-prod
